# elv-risc1run

./: Makefile  README.md  config.yaml
src/: CMakeLists.txt  Node.c  Node.h  NodeStack.c  double.c  elcorelib.c  elcorelib.h  risc1lib.c  risc1lib.h  risc1rpmsg.c  risc1run.c  syscall.h  yaml.c
